# cereal-multiple-inheritance

./: .gitmodules  CMakeLists.txt
include/: base.h  derived.h  other_base.h
src/: base.cpp  derived.cpp  other_base.cpp
test/: test.cpp
